--- a/src/main/resources/templates/step3/index.html
+++ b/src/main/resources/templates/step3/index.html
@@ -25,6 +25,8 @@
             <input id="name" name="name" type="text"><br>
             <label for="content">コメント内容:</label>
             <input id="content" name="content" type="text"><br>
+            <label for="email">メール:</label>
+            <input id="Email" name="Email" type="text"><br>
             <input type="submit" value="コメント投稿">
           </form>
         </div>
